clusters/talos-cluster/apps/source-rotator/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-source-rotator-egress
  namespace: source-rotator
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: source-rotator
      app.kubernetes.io/component: source-token-minter
  egress:
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEntities:
        - kube-apiserver
    - toServices:
        - k8sService:
            serviceName: vault
            namespace: deploy-vault
      toPorts:
        - ports:
            - port: "8200"
              protocol: TCP
    # GitHub API published CIDRs (GET /meta .api). Maintenance point: GitHub updates ranges rarely; re-pull if egress to api.github.com starts failing.
    - toCIDRSet:
        - cidr: 192.30.252.0/22
        - cidr: 185.199.108.0/22
        - cidr: 140.82.112.0/20
        - cidr: 143.55.64.0/20
        - cidr: 2a0a:a440::/29
        - cidr: 2606:50c0::/32
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
