clusters/talos-cluster/apps/source-rotator/vault-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-source-rotator-vault-api-ingress
  namespace: deploy-vault
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: server
      app.kubernetes.io/name: vault
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: source-rotator
          podSelector:
            matchLabels:
              app.kubernetes.io/name: source-rotator
              app.kubernetes.io/component: source-token-minter
      ports:
        - port: 8200
          protocol: TCP
